feat: 适配移动端;用于各端差异过大的路由切换设置的项目模版

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,27 @@
-# 变量必须以 VITE_ 为前缀才能暴露给外部读取
-VITE_APP_TITLE = 'vue3-element-admin'
-VITE_APP_PORT = 3000
-VITE_APP_BASE_API = '/dev-api'
+# 本地环境
+VITE_USER_NODE_ENV = development
+
+# 公共基础路径
+VITE_PUBLIC_PATH = /
+
+# 路由模式
+# Optional: hash | history
+VITE_ROUTER_MODE = history
+
+# 打包时是否删除 console
+VITE_DROP_CONSOLE = true
+
+# 是否开启 VitePWA
+VITE_PWA = false
+
+# 开发环境接口地址
+VITE_API_URL = /api
+
+# 请求接口域名
+VITE_API_DOMAIN = http://td-01.host.in:6424
+
+# 开发环境跨域代理，支持配置多个
+VITE_PROXY = [["/api/plateform","http://td-01.host.in:22222"], ["/api","http://td-01.host.in:6523"]]
+# VITE_PROXY = [["/api","http://192.168.0.211:6424"]] # 孙杰本地
+# VITE_PROXY = [["/api-easymock","https://mock.mengxuegu.com"],["/api-fastmock","https://www.fastmock.site"]]
+# VITE_PROXY = [["/api","http://192.168.0.199:6424"]]
