--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,29 @@
-VITE_APP_TITLE = 'vue3-element-admin'
-VITE_APP_PORT = 3000
-VITE_APP_BASE_API = '/prod-api'
+# VITE_APP_TITLE = 'vue3-element-admin'
+# VITE_APP_PORT = 3000
+# VITE_APP_BASE_API = '/prod-api'
+# 本地环境
+# 线上环境
+VITE_USER_NODE_ENV = production
+
+# 公共基础路径
+VITE_PUBLIC_PATH = /
+
+# 路由模式
+# Optional: hash | history
+VITE_ROUTER_MODE = history
+
+# 是否启用 gzip 或 brotli 压缩打包，如果需要多个压缩规则，可以使用 “,” 分隔
+# Optional: gzip | brotli | none
+VITE_BUILD_COMPRESS = none
+
+# 打包压缩后是否删除源文件
+VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
+
+# 打包时是否删除 console
+VITE_DROP_CONSOLE = true
+
+# 是否开启 VitePWA
+VITE_PWA = true
+
+# 线上环境接口地址
+VITE_API_URL = /api
