--- a/package.json
+++ b/package.json
@@ -11,23 +11,27 @@
     "lint:prettier": "prettier --write \"**/*.{js,ts,json,css,less,scss,vue,html,md}\""
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "element-plus": "^2.8.4",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.2",
+    "qs": "^6.13.0",
+    "unocss": "^0.63.4",
     "vue": "^3.4.37",
     "vue-i18n": "^9.14.1",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@iconify-json/ep": "^1.2.0",
     "@types/node": "^22.7.4",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^9.11.1",
     "eslint-plugin-vue": "^9.28.0",
-    "fast-glob": "^3.2.11",
+    "fast-glob": "^3.3.2",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "sass": "^1.79.4",
